--- a/package.json
+++ b/package.json
@@ -5,13 +5,15 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server --port 3333 --watch db.json"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.7.4",
     "@emotion/react": "^11",
     "@emotion/styled": "^11",
     "framer-motion": "^5",
+    "json-server": "^0.17.0",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
